# cxxlog

./: CMakeLists.txt  INSTALL  README.md  cxxlog_config.hpp.in
include/: cxxlog.hpp  cxxlog_config.hpp
test/: .gitignore  CMakeLists.txt  cxxlog_test.cpp
